add_subdirectory(msgpack)

set(OST_IO_MSGPACK_HEADERS
msgpack.hpp
msgpack.h
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_HEADERS
${OST_IO_MSGPACK_MSGPACK_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V2_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_V2_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_HEADERS
${OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_BOOST_HEADERS
${OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_BOOST_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_V2_ADAPTOR_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_BOOST_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_BOOST_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_TR1_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_TR1_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_CPP11_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_CPP11_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_DETAIL_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_ADAPTOR_DETAIL_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREPROCESSOR_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V2_HEADERS
${OST_IO_MSGPACK_MSGPACK_V2_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_PREDEF_HEADERS
${OST_IO_MSGPACK_MSGPACK_PREDEF_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_ADAPTOR_HEADERS
${OST_IO_MSGPACK_MSGPACK_ADAPTOR_HEADERS}
PARENT_SCOPE
)

set(OST_IO_MSGPACK_MSGPACK_V1_HEADERS
${OST_IO_MSGPACK_MSGPACK_V1_HEADERS}
PARENT_SCOPE
)

